Run the `LibAFL`-based fuzzer
* Update `skribe` to version `0.1.40`